deploy/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: qcon-api
  labels:
    app: qcon-api
spec:
  replicas: 3
  
  template:
    spec:
      containers:
      - name: qcon-api
        image: registry.dev.ltc.bcit.ca/web-apps/qcon/qcon-api:latest
        volumeMounts:
          - mountPath: /code
            name: shared-data
      serviceAccountName: dependabot-qcon-api
      volumes:
        - configMap:
            items:
              - key: vault-agent-config.hcl
                path: vault-agent-config.hcl
            name: qcon-api-vault-agent-config
          name: config
        - emptyDir: {}
          name: shared-data
