deploy/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qcon-api-ingress
  namespace: qcon-api
spec:
  tls:
  - hosts:
      - stable.dev.ltc.bcit.ca
    secretName: star-ltc-bcit-ca
  rules:
  - host: stable.dev.ltc.bcit.ca
    http:
      paths:
      - path: /qcon-api
        pathType: Prefix
        backend:
          service:
            name: qcon-api-service
            port:
              number: 8000
